Updated .htaccess w/placeholder for RewriteBase

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,10 +1,12 @@
 RewriteEngine On
 
+#RewriteBase /
+
 # if a directory or a file exists, use it directly
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
 # otherwise forward it to index.php
-RewriteRule .* index.php
+RewriteRule .* index.php/$0
 RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization},L]
 
